# uBITXFly

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Boot/: STM32F070F6Px_FLASH.ld
Inc/: main.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h
Src/: main.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c
